# registration-tools

./: .gitignore  .gitmodules  Notebok_registration.ipynb  README.md  environment.yml  pyproject.toml  setup.cfg  spatial-registration.py  time-registration.py
Notebooks/: notebook.ipynb
User-manual/: biblio.bib  user-manual.md  user-manual.tex
User-manual/installation/: installation_manual.tex
User-manual/usage/: biblio.bib  user-manual.md
docker/: README.md  build.sh  dockerfile  environment.yaml  environment.yml
json-examples/: example-time-NL.json  example-time-rigid-c1.json  example-time-rigid-no-pad.json  example-time-rigid-no-prop.json  example-time-rigid.json  example-time-trans-no-prop-interp-smooth.json  example-time-trans-no-prop-interp.json  example-time-trans-no-prop-smooth.json  example-time-trans-no-prop.json  example-time-trans-smooth.json  example-time-trans.json
json-examples/Done/: example-time-rigid-no-prop.json  example-time-rigid.json  example-time-trans-no-prop-interp.json  example-time-trans-no-prop.json  example-time-trans.json
json-examples/spatial/: apply-multi-TP.json  apply-single-TP.json  parameter-example-apply-time.json  parameter-example-apply.json  parameter-example-test-init.json  parameter-example.json  single-TP.json  test-bdv.json  test-init-trsf.json
json-examples/time/: example-time-rigid-c1.json  example-time-rigid.json  example-time-trans-no-prop-interp.json  example-time-trans.json  test.json
json-examples/vectorflow/: VF.json  VF2.json
src/: spatial-registration.py  time-registration.py
src/IO/: IO.py  __init__.py  folder.py  h5.py  inrimage.py  klb.py  spatial_image.py  tif.py
src/registration/: time-registration.py
src/registrationtools/: Notebok_registration.ipynb  __init__.py  notebook.ipynb  spatial_registration.py  time_registration.py  utils.py  vectorflow.py
src/registrationtools/_tests/: test_spatial_forvalentin.py  test_spatial_reg.py  test_time_reg.py
src/registrationtools/data/JSON/: test4.json
src/registrationtools/data/JSON_spatial/: test1.json
src/registrationtools/data/JSON_time/: test1.json  test2.json  test3.json
src/registrationtools/data/images/: t0.tiff  t1.tiff  t2.tiff  t3.tiff  t4.tiff  t5.tiff
src/registrationtools/data/images/tmp/: t0.tiff
