[metadata]
name = 3D-registration
version = 0.0.1
description = Some scripts to register images in space and time
# long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leoguignard/registration-tools
author = Léo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/leoguignard/registration-tools/issues
    Documentation = https://github.com/leoguignard/registration-tools#README.md
    Source Code = https://github.com/leoguignard/registration-tools
    User Support = https://github.com/leoguignard/registration-tools/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
    statsmodels
    h5py
    tifffile

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
scripts =
    src/registration/spatial-registration.py
    src/registration/time-registration.py

# add your package requirements here
[options.packages.find]
where = src

[options.package_data]
* = *.yaml
