[metadata]
name = 3D-registration
version = 0.4.1
description = Some scripts to register images in space and time
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuignardLab/registration-tools
author = Léo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GuignardLab/registration-tools/issues
    Documentation = https://github.com/GuignardLab/registration-tools#README.md
    Source Code = https://github.com/GuignardLab/registration-tools
    User Support = https://github.com/GuignardLab/registration-tools/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
    statsmodels
    h5py
    tifffile
    importlib-resources
    matplotlib
    transforms3d

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.entry_points]
console_scripts =
    spatial-registration = registrationtools:spatial_registration
    time-registration = registrationtools:time_registration

# add your package requirements here
[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    
[options.package_data]
* = *.yaml
registrationtools = data/images/*.tiff, data/JSON_spatial/*.json, data/JSON_time/*.json